Add table on top of solr/security page Add cve as metadata for security news

--- a/content/solr/security/2014-08-18-4-8-0-update-poi.md
+++ b/content/solr/security/2014-08-18-4-8-0-update-poi.md
@@ -1,8 +1,9 @@
-Title: Recommendation to update Apache POI in Apache Solr 4.8.0, 4.8.1, and 4.9.0 installations
+Title: CVE-2014-3529, CVE-2014-3574: Recommendation to update Apache POI in Apache Solr 4.8.0, 4.8.1, and 4.9.0 installations
 category: solr/security
 URL:
 save_as:
 slug: solr-security-security-recommendation-to-update-apache-poi-in-apache-solr-480-481-and-490-installations
+cve: CVE-2014-3529
 
 Apache Solr versions 4.8.0, 4.8.1, 4.9.0 bundle Apache POI 3.10-beta2 with its binary release tarball.
 This version (and all previous ones) of Apache POI are vulnerable to the following issues:
