Updates for 8.8.2 Release

--- a/content/core/core_news/2012-04-12-8-8-2-available.md
+++ b/content/core/core_news/2012-04-12-8-8-2-available.md
@@ -1,7 +1,7 @@
 Title: Apache Lucene™ 8.8.2 available
 category: core/news
-URL: https://cwiki.apache.org/confluence/display/LUCENE/ReleaseNote882
-save_as: 2021-04-12-8-8-2-available.md
+URL:
+save_as:
 
 The Lucene PMC is pleased to announce the release of Apache Lucene 8.8.2.
 
