--- a/content/pylucene/pylucene_news/2021-12-15-8-11-0.available.md
+++ b/content/pylucene/pylucene_news/2021-12-15-8-11-0.available.md
@@ -3,6 +3,6 @@ category: pylucene/news
 URL: 
 save_as: 
 
-This release tracks Lucene Core's 8.11.0 <a href="https://lucene.apache.org/core/corenews.html">release</a>.<br/>
+This release tracks Lucene Core's 8.11.0 <a href="https://lucene.apache.org/core/corenews.html">release</a> and requires Java 8.<br/>
 See <a href="https://svn.apache.org/repos/asf/lucene/pylucene/tags/pylucene_8_11_0/CHANGES">PyLucene 8.11.0 CHANGES</a> and <a href="https://svn.apache.org/repos/asf/lucene/pylucene/tags/pylucene_8_11_0/jcc/CHANGES">JCC 3.11 CHANGES</a> for details.<br/>
 Source distributions are available <a href="https://www.apache.org/dyn/closer.lua/lucene/pylucene/">here</a>.<br/>
