--- a/content/pylucene/pylucene_news/2022-04-27-9-1-0-available.md
+++ b/content/pylucene/pylucene_news/2022-04-27-9-1-0-available.md
@@ -3,6 +3,6 @@ category: pylucene/news
 URL: 
 save_as: 
 
-This release tracks Lucene Core's 9.1.0 <a href="https://lucene.apache.org/core/corenews.html">release</a>.<br/>
+This release tracks Lucene Core's 9.1.0 <a href="https://lucene.apache.org/core/corenews.html">release</a> and requires Java 11.<br/>
 See <a href="https://svn.apache.org/repos/asf/lucene/pylucene/tags/pylucene_9_1_0/CHANGES">PyLucene 9.1.0 CHANGES</a> and <a href="https://svn.apache.org/repos/asf/lucene/pylucene/tags/pylucene_9_1_0/jcc/CHANGES">JCC 3.12 CHANGES</a> for details.<br/>
 Source distributions are available <a href="https://www.apache.org/dyn/closer.lua/lucene/pylucene/">here</a>.<br/>
