Correct Lucene 9.11.0 news page format

--- a/content/core/core_news/2024-06-06-9-11-0-available.md
+++ b/content/core/core_news/2024-06-06-9-11-0-available.md
@@ -15,7 +15,7 @@ This release contains numerous bug fixes, optimizations, and improvements, some 
 
 #### New features
 
- * Add support for `posix_madvise` to MMapDirectory: If running on Linux/macOS and Java 21 or later, MMapDirectory uses IOContext to pass suitable MADV flags to kernel of operating system. This may improve paging logic especially when working with large indexes under memory pressure. 
+ * Add support for posix_madvise to MMapDirectory: If running on Linux/macOS and Java 21 or later, MMapDirectory uses IOContext to pass suitable MADV flags to kernel of operating system. This may improve paging logic especially when working with large indexes under memory pressure. 
  * Expand support for new scalar bit levels for HNSW vectors. This includes 4-bit vectors and an option to compress them to gain a 50% reduction in memory usage.
  * Recursive graph bisection is now supported on indexes that have blocks 
 
@@ -28,7 +28,7 @@ This release contains numerous bug fixes, optimizations, and improvements, some 
 
  * Use RWLock to access LRUQueryCache to reduce contention.
  * Speedup multi-segment HNSW graph search for diversifying child kNN queries.
- * Add a MemorySegment Vector scorer - for scoring without copying on-heap. This can improve search latency by almost 2x for `byte[]` vectors.
+ * Add a MemorySegment Vector scorer - for scoring without copying on-heap. This can improve search latency by almost 2x for byte vectors.
  * Switch to using optimized, primitive collections where possible to improve performance and heap utilization.
 
 
