Updating Lucene news for release 9.12.0

--- a/content/core/core_news/2024-09-28-9-12-0-available.md
+++ b/content/core/core_news/2024-09-28-9-12-0-available.md
@@ -26,6 +26,8 @@ available for immediate download at:
 #### New Features
  * Improve intra-merge parallelism for many value types. (Ben Trent)
  * Add support JDK 23 to the Panama Vectorization Provider. (Chris Hegarty)
+ * Match-time aggregation engine with improved flexibility and performance.
+   (Egor Potemkin, Shradha Shankar)
 
 #### Improvements
  * Add Intervals.regexp and Intervals.range methods to produce IntervalsSource
