add expressions module changes Lucene 10.0.0 news entry

--- a/content/core/core_news/2024-10-14-10-0-0-available.md
+++ b/content/core/core_news/2024-10-14-10-0-0-available.md
@@ -29,6 +29,7 @@ This release contains numerous bug fixes, optimizations, and improvements, some 
 #### Improvements
  * Lucene now opens files with the MADV_RANDOM advice by default on Linux and Mac OS. This results in better efficiency for indexes that exceed the size of the page cache, but can make it slower to load indexes in the page cache. It is possible to revert to the MADV_NORMAL read advice by default by passing -Dorg.apache.lucene.store.defaultReadAdvice=NORMAL as a JVM startup flag.
  * Snowball dictionaries have been upgraded, resulting in improved tokenization. This may require reindexing to ensure consistency of search results with pre-10.0 indexes.
+ * The expressions module is now using MethodHandles and [Dynamic Class-File Constants (JEP 309)](https://openjdk.org/jeps/309) in combination with [hidden classes (JEP 371)](https://openjdk.org/jeps/371) to implement a strict and type-safe call to external functions. This allows to easier extend expressions with custom functions in secure way because runtime linking of custom functions is no longer the responsibility of the expressions scripting engine. In addition, the hidden classes created by the expressions engine no longer suffer from global classloader locks.
 
 ... plus a multitude of helpful bug fixes!
 
