fix formatting in 9.12.1 news

--- a/content/core/core_news/2024-12-13-9-12-1-available.md
+++ b/content/core/core_news/2024-12-13-9-12-1-available.md
@@ -14,7 +14,7 @@ This release contains numerous bug fixes, optimizations, and improvements, some 
 ### Lucene 9.12.1 Release Highlights:
 
 #### Improvements
- * Allow easier configuration of the Panama vectorization provider with newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion` system property to increase the set of Java versions that Panama vectorization will provide optimized implementations for.
+ * Allow easier configuration of the Panama vectorization provider with newer Java versions. Set the org.apache.lucene.vectorization.upperJavaFeatureVersion system property to increase the set of Java versions that Panama vectorization will provide optimized implementations for.
 
 #### Bug fixes
  * Fixed backwards compatibility bug that caused sparse (not all documents have a vector) KNN indices written with 9.0.0 to give silently (no exception) terrible recall results when searched by any 9.x release
