more edit release highlights

--- a/content/core/core_news/2025-04-10-2-0-available.md
+++ b/content/core/core_news/2025-04-10-2-0-available.md
@@ -20,14 +20,12 @@ More vectorization when processing PointRangeQuerys and non-scoring BooleanQuery
 * Merging matches of dense conjunctive clauses using bitwise ANDs. This especially helps on postings blocks that are encoded as bit sets.
 Implementing the ACORN-1 algorithm for pre-filtered vector searches.
 * Searches that don't require scores and match many docs should generally see good speedups, depending on how expensive the Collector is. Compared with Lucene 10.1.0, Lucene's nightly benchmarks report the following speedups when counting the number of hits of a the following queries:
-
-- Disjunctions of term queries: 77% to 4x faster
-- Conjunctions of term queries: 38% to 5x faster
-- Filtered disjunctions of term queries: 2.5x to 4x faster
-- Filtered PointRangeQuery: 3.5x faster
-- And the following speedup when computing top-100 hits:
-
-* Pre-filtered vector search: 3.5x faster
+	* Disjunctions of term queries: 77% to 4x faster
+	* Conjunctions of term queries: 38% to 5x faster
+	* Filtered disjunctions of term queries: 2.5x to 4x faster
+	* Filtered PointRangeQuery: 3.5x faster
+* And the following speedup when computing top-100 hits: 
+	*Pre-filtered vector search: 3.5x faster
 
 ### Changes in Runtime Behavior
 * TieredMergePolicy's default floor segment size was increased from 2MB to 16MB. This is expected to result in slightly slower indexing and about 10 fewer segments per index for applications that flush frequently. This should in-turn help speed up queries that have a high per-segment overhead such as multi-term queries, point queries and vector search.
