more edit release highlights

--- a/content/core/core_news/2025-04-10-2-0-available.md
+++ b/content/core/core_news/2025-04-10-2-0-available.md
@@ -11,7 +11,7 @@ This release contains numerous features, optimizations, and improvements, some o
 
 <https://lucene.apache.org/core/downloads.html>
 
-###Lucene 10.2.0 Release Highlights
+### Lucene 10.2.0 Release Highlights
 Lucene 10.2 includes major search-time performance improvements for a wide variety of queries. This is most notably due to:
 
 * Improved storage format of doc IDs in BKD trees for faster decoding.
@@ -27,14 +27,14 @@ Implementing the ACORN-1 algorithm for pre-filtered vector searches.
 * And the following speedup when computing top-100 hits: 
 	* Pre-filtered vector search: 3.5x faster
 
-### Changes in Runtime Behavior
+#### Changes in Runtime Behavior
 * TieredMergePolicy's default floor segment size was increased from 2MB to 16MB. This is expected to result in slightly slower indexing and about 10 fewer segments per index for applications that flush frequently. This should in-turn help speed up queries that have a high per-segment overhead such as multi-term queries, point queries and vector search.
 
-### New Features
+#### New Features
 * Added TopDocs#rrf to combine multiple TopDocs instances using reciprocal rank fusion.
 * Added SeededKnnVectorQuery, an optimization to KnnVectorQuery that allows selecting better entry points for vector search using a seed Query.
 
-###Improvements
+#### Improvements
 * RegexpQuery support for unicode case-insensitive characters and ranges.  
 Optimizations
 * Java 24 vector API support
