update formatting for 10.3.0 Lucene news

--- a/content/core/core_news/2025-09-13-10-3-0-available.md
+++ b/content/core/core_news/2025-09-13-10-3-0-available.md
@@ -22,27 +22,31 @@ The terms dictionary performs about 30% faster than in Lucene 10.2 on primary-ke
 
 
 **New Features**
- * Supports reranking with late interaction model multi-vectors, full precision vector similarity scores, or any provided DoubleValuesSource, enabling improved ranking of search results.
- * Adds a MultiIndexMergeScheduler – a multi-tenant wrapper that allows sharing a common merge scheduler across multiple instances.
+
+  * Supports reranking with late interaction model multi-vectors, full precision vector similarity scores, or any provided DoubleValuesSource, enabling improved ranking of search results.
+  * Adds a MultiIndexMergeScheduler – a multi-tenant wrapper that allows sharing a common merge scheduler across multiple instances.
 
 
 **API Changes**
- * Adds API to fetch the size of off-heap memory required by a KNN field. This size can be used to help determine the memory requirements for optimal search performance, which can be greatly affected by page faults when not enough memory is available.
- * RandomVectorScorer now supports a bulk scoring interface.
- * `LeafReader#searchNearestVectors` now accepts an AcceptDocs instance instead of a Bits instance to identify document IDs to filter.
- * Collectors can now take advantage of pre-aggregated data to speed up faceting using LeafCollector#collectRange.
+
+  * Adds API to fetch the size of off-heap memory required by a KNN field. This size can be used to help determine the memory requirements for optimal search performance, which can be greatly affected by page faults when not enough memory is available.
+  * RandomVectorScorer now supports a bulk scoring interface.
+  * LeafReader#searchNearestVectors now accepts an AcceptDocs instance instead of a Bits instance to identify document IDs to filter.
+  * Collectors can now take advantage of pre-aggregated data to speed up faceting using LeafCollector#collectRange.
 
 
 **Improvements and Optimizations**
- * Adds optimistic knn search to vector queries. Optimistic knn search addresses a major issue where we return inconsistent results due to race conditions in the shared queue previously used over multi-segment search.
- * Faster vector search on HNSW graphs through GroupVarInt encoding.
- * Searcher managers now support 'Adaptive Refresh', enabling users to control the commit points it refreshes on. This helps with graceful handling of large replication payloads in segment-replicated systems.
+
+  * Adds optimistic knn search to vector queries. Optimistic knn search addresses a major issue where we return inconsistent results due to race conditions in the shared queue previously used over multi-segment search.
+  * Faster vector search on HNSW graphs through GroupVarInt encoding.
+  * Searcher managers now support 'Adaptive Refresh', enabling users to control the commit points it refreshes on. This helps with graceful handling of large replication payloads in segment-replicated systems.
 
 
 **Runtime Behavior Changes and Bug Fixes**
- * The default ReadAdvice has been changed from RANDOM to NORMAL. MMapDirectory will no longer set any specific read advice out-of-the-box.
- * Default `RefCountedSharedArena.DEFAULT_MAX_PERMITS` are reduced to 64. Also fixes the infinite loop when RefCountedSharedArena's underlying Arena#close fails due to concurrent usage of segments.
- * Uses `READONCE` when reading segment infos, to fix mmap leaks on segment info files. Includes fixes for multiple other resource leaks.
+
+  * The default ReadAdvice has been changed from RANDOM to NORMAL. MMapDirectory will no longer set any specific read advice out-of-the-box.
+  * Default RefCountedSharedArena.DEFAULT_MAX_PERMITS are reduced to 64. Also fixes the infinite loop when RefCountedSharedArena's underlying Arena#close fails due to concurrent usage of segments.
+  * Uses READONCE when reading segment infos, to fix mmap leaks on segment info files. Includes fixes for multiple other resource leaks.
 
 
 Please read CHANGES.txt for a full list of new features and changes:
