Correct release notes for 10.4.0

--- a/content/core/core_news/2026-02-25-10-4-0-available.md
+++ b/content/core/core_news/2026-02-25-10-4-0-available.md
@@ -12,17 +12,16 @@ This release contains numerous bug fixes, optimizations, and improvements, some 
   <https://lucene.apache.org/core/downloads.html>
 
 ### Lucene 10.4.0 Release Highlights:
-Lucene 10.4 brings significant performance improvements and new a knn vector format.
 
-Lucene 10.4 brings some significant performance improvements and a brand new knn vectors format. 
+Lucene 10.4 brings some significant performance improvements and a brand new knn vectors format.
 
-Many lucene queries should see a performance improvement of 10-15%, some might even see a 35% improvement! This is due to increasing the the block size of the terms postings and better utilization of SIMD optimized code.
+Many lucene queries should see a performance improvement of 10-15%, some might even see a 35% improvement! This is due to increasing the block size of the terms postings and better utilization of SIMD optimized code.
 
 Additionally, there is a new scalar quantized format for dense vectors and knn search. Lucene104ScalarQuantizedVectorsFormat and Lucene104HnswScalarQuantizedVectorsFormat allow custom quantized bits for 1, 2, 4, 7, and 8. The recall has improved significantly and for many vector types, quantizing to 2 bits will achieve even better recall than older formats at the 4 bit level. This improves latency while increasing recall for various vector work loads.
 
 **New Features**
 
-* Provides a new and improved scalar quantized formats Lucene104ScalarQuantizedVectorsFormat  and Lucene104HnswScalarQuantizedVectorsFormat  for dense vectors. Allowing for quantizing to 1, 2, 4, 7, and 8 bits. For reference, the new 2 bit quantization technique provides better recall and speed than the old 4 bit.
+* Provides new and improved scalar quantized formats Lucene104ScalarQuantizedVectorsFormat  and Lucene104HnswScalarQuantizedVectorsFormat  for dense vectors. Allowing for quantizing to 1, 2, 4, 7, and 8 bits. For reference, the new 2 bit quantization technique provides better recall and speed than the old 4 bit.
 
 
 **API Changes**
