--- a/content/core/core_news/2026-02-25-10-4-0-available.md
+++ b/content/core/core_news/2026-02-25-10-4-0-available.md
@@ -40,10 +40,8 @@ Additionally, there is a new scalar quantized format for dense vectors and knn s
 **Runtime Behavior Changes and Bug Fixes**
 
 * Fix tessellator failure by preferring the shared vertex that is the leftmost vertex of the hole
-* The `reverse` field of SortField is now final. If you have subclassed SortField,
-  you should set `reverse` in the super constructor.
-* Align float vectors on disk to 64 bytes, for optimal performance on Arm Neoverse
-  machines
+* The "reverse" field of SortField is now final. If you have subclassed SortField, you should set "reverse" in the super constructor.
+* Align float vectors on disk to 64 bytes, for optimal performance on Arm Neoverse machines
 
 
 Please read CHANGES.txt for a full list of new features and changes:
